Tests for add, delete and most of the updates for embedded movies have been completed